# trilha-python-dio

./: README.md
07 - Banco de dados/: 01_conexao.py  01_dbapi.py  02_injecao_sql.py  03_transacao.py  meu_banco.sqlite
11 - Desenvolvimento de APIs com Flask/dio_bank/: app.py  pyproject.toml  render-deploy.sh
11 - Desenvolvimento de APIs com Flask/dio_bank/migrations/versions/: 98002e3f63cd_initial_migration.py
11 - Desenvolvimento de APIs com Flask/dio_bank/src/: app.py  db.py  utils.py  wsgi.py
11 - Desenvolvimento de APIs com Flask/dio_bank/src/controllers/: auth.py  role.py  user.py
11 - Desenvolvimento de APIs com Flask/dio_bank/src/instance/: blog.sqlite  dio_bank.sqlite
11 - Desenvolvimento de APIs com Flask/dio_bank/src/migrations/versions/: 473eb1a92e1f_initial_migration.py  83d18b8ac787_add_password_field.py  c5388075c4c3_add_active_attr_in_user.py
11 - Desenvolvimento de APIs com Flask/dio_bank/tests/integration/controllers/: test_user.py
11 - Desenvolvimento de APIs com Flask/tests/: conftest.py  test_utils.py
11 - Desenvolvimento de APIs com Flask/tests/integration/: conftest.py
11 - Desenvolvimento de APIs com Flask/tests/integration/controllers/: test_user.py
